assets/css/style.scss
---
---
// Breakpoints
$large-breakpoint: 64em !default;
$medium-breakpoint: 42em !default;

// Headers
$header-heading-color: #606c71;
$header-bg-color: #ffffff;
$header-bg-color-secondary: #ffffff !default;

// Text
$section-headings-color: #606c71 !default;
$body-text-color: #606c71 !default;
$body-link-color: #606c71 !default;
$blockquote-text-color: #1e6bb8 !default;

// Code
$code-bg-color: #f3f6fa !default;
$code-text-color: #567482 !default;

// Borders
$border-color: #dce6f0 !default;
$table-border-color: #e9ebec !default;
$hr-border-color: #dce6f0 !default;

@import '{{ site.theme }}';

body {
	height:100%;
	margin: 0;
	padding-left: 32px;
	padding-right: 32px;
}

.page-header {
	margin-left: auto;
  margin-right: auto;
	border-bottom: solid 1px #dce6f0;
  padding: 2rem 3rem;
	max-width: 1280px;
	margin-bottom: 4rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.title {
	font-weight: 500;
	font-size: x-large;

	&:hover {
		text-decoration: none;
	}
}

.main-content, .blog, .newsletter-form {
	padding: 0;
	max-width: 1280px;
	margin-left: auto;
  margin-right: auto;
	margin-bottom: 5rem;
}

i,
a {
	&.small { font-size: 2em; }
	&.medium { font-size: 3em; }
	&.large { font-size: 5em; }

}

.blog {
	a {
		color: #c4a459;
	}
}

.social-media {
	a {
		padding: 6px;
	}
}

.newsletter-form {
	text-align: center;
	padding: 1em;
	background-color: $code-bg-color;

	.spam {
		font-size: .85em;
	}

	input {
		margin-top: 0.25em;
		margin-bottom: 0.5em;
		padding: 0.75em;
		border:1px solid #f3f6fa;
		border-radius: 3px;
		transition: box-shadow .2s ease;
	}

	input[type="email"] {
		width: 70%;
	}

	input[type="submit"] {
		background-color: #c4a459;
		border: 1px solid #c4a459;
		color: #eeeeee;
		width: 20%;
	}
}

footer {
	text-align: center;
	max-width: 1280px;
	margin-left: auto;
  margin-right: auto;
}

.blog ul {
	list-style: none;
	padding: 0;

	.text-year {
		border-bottom: solid 1px #dadadb;
		padding-bottom: 16px;
	}

	li {
		&.post {
			display: flex;
			align-items: center;

			.post-title {
				flex-grow: 3;
				font-weight: bold;
				margin-top: 0;
			}

			a.read-more {
				color: #abb7c8;
			}

			.post-info {
				font-size: 12px;
				color: #abb7c8;

				.post-date {
					display: block;
				}
			}
		}
	}
}

@media screen and (max-width: 42em) { body { padding: 16px !important; } }
@media screen and (max-width: 42em) { .blog .left-col { display: none; } }
@media screen and (max-width: 42em) { .blog .mid-col { padding: 16px; width: 100%; } }
@media screen and (max-width: 42em) { .blog ul li.post .post-info{ display: none; } }
@media screen and (max-width: 42em) { section.blog-history ul { padding-left: 0; } }

